[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-context-compression"
version = "0.1.0"
description = "LLM context compression utilities for AI agent pipelines"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Meridian"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22; python_version>='3.8'",
    "tiktoken",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]

[project.scripts]
meridian-context-compression = "meridian_context_compression.cli:main"

[project.urls]
Homepage = "https://github.com/meridianmindx/meridian-context-compression"
Documentation = "https://github.com/meridianmindx/meridian-context-compression#readme"
Repository = "https://github.com/meridianmindx/meridian-context-compression.git"
